--- a/angular.json
+++ b/angular.json
@@ -52,12 +52,11 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/select2/select2.css"
+
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
-              "node_modules/select2/select2.js",
-              "node_modules/select2/jquery.min.js"
+
             ]
           },
           "configurations": {
@@ -125,5 +124,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
